# monoservice

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
HTTP/: Soup.pm
Monoidea-HTTP/: Changes  MANIFEST  Makefile.PL  README  ignore.txt  monoidea_http.conf  test.xml
Monoidea-HTTP/lib/Monoidea/: HTTP.pm
Monoidea-HTTP/t/: 00-load.t  action_login.t  action_upload.t
Monoidea-HTTP/xt/: boilerplate.t
Monoidea-Service/: Changes  MANIFEST  Makefile.PL  README  ignore.txt
Monoidea-Service/db/: CREATE_Monoservice_MySQL_Database.sql
Monoidea-Service/lib/Monoidea/: Service.pm
Monoidea-Service/lib/Monoidea/DB/: MySQLConnector.pm  MySQLConnectorManager.pm
Monoidea-Service/monoidea.etc/: monoidea_service.yaml
Monoidea-Service/t/: 00-load.t  01-MySQLConnector.t  02-MySQLConnectorManager.t
Monoidea-Service/xt/: boilerplate.t
Monoidea-WWW/: Changes  META.yml  MYMETA.json  MYMETA.yml  Makefile  Makefile.PL  README  monoidea_www.conf  monoidea_www.psgi
Monoidea-WWW/blib/lib/Monoidea/: WWW.pm
Monoidea-WWW/blib/man1/: monoidea_www_cgi.pl.1  monoidea_www_create.pl.1  monoidea_www_fastcgi.pl.1  monoidea_www_server.pl.1  monoidea_www_test.pl.1
Monoidea-WWW/blib/man3/: Monoidea::WWW.3pm  Monoidea::WWW::Controller::Root.3pm
Monoidea-WWW/blib/script/: monoidea_www_create.pl  monoidea_www_fastcgi.pl
Monoidea-WWW/db/: CREATE_Monoservice_MySQL_Database.sql  INSERT_Monoservice_MySQL_Database.sql
Monoidea-WWW/lib/Monoidea/: Schema.pm  WWW.pm
Monoidea-WWW/root/: accessdenied.tt  download.tt  gallery.tt  index.tt  login.tt  page.tt
Monoidea-WWW/root/admin/: start.tt
Monoidea-WWW/root/cleaner/: index.tt
Monoidea-WWW/root/download/: index.tt
Monoidea-WWW/root/mediaqueue/: index.tt
Monoidea-WWW/root/monoservice/: download.tt
Monoidea-WWW/root/people/: login.tt  logout.tt
Monoidea-WWW/root/purchase/: index.tt
Monoidea-WWW/root/scripts/: ajaxTable.js  downloadList.js
Monoidea-WWW/root/upload/: index.tt
Monoidea-WWW/script/: monoidea_www_cgi.pl  monoidea_www_server.pl  monoidea_www_test.pl
Monoidea-WWW/t/: 01app.t  controller_Admin.t  controller_Cleaner.t  controller_Config.t  controller_Download.t  controller_MediaQueue.t  controller_Monoservice-Download.t  controller_Monoservice.t  controller_People.t  controller_Purchase.t  controller_Status.t  controller_Upload.t  model_Download.t  model_MONOSERVICE.t  model_Upload.t  view_Download.t  view_Gallery.t  view_Upload.t  view_Web.t
Monoservice/DB/: AProcQueueDAO.pm  MySQLConnector.pm  MySQLConnectorManager.pm  monoservice_aproc_queue_mic_upload_file_dao.c  monoservice_billing_address_dao.h  monoservice_cam_upload_file_dao.h  monoservice_media_account_dao.c  monoservice_mic_upload_file_dao.c  monoservice_mysql_connector.h  monoservice_mysql_connector_manager.c  monoservice_mysql_connector_manager.h  monoservice_vproc_queue_dao.h  monoservice_vproc_queue_screen_upload_file_dao.h
Monoservice/Log/: Logger.pm
Monoservice/cgi-bin/: monoservice_download.c  monoservice_upload.pl  monoservice_video.c
Monoservice/db/: monoservice_aproc_queue_dao.c  monoservice_aproc_queue_dao.h  monoservice_aproc_queue_dao.pl  monoservice_aproc_queue_mic_upload_file_dao.h  monoservice_aproc_queue_soundcard_upload_file_dao.c  monoservice_billing_address_dao.c  monoservice_cam_upload_file_dao.c  monoservice_end_credits_video_file_dao.c  monoservice_media_account_dao.h  monoservice_mysql_connector.pl  monoservice_mysql_connector_manager.pl  monoservice_payment_transaction_dao.h  monoservice_product_dao.c  monoservice_product_dao.h  monoservice_raw_audio_file_dao.h  monoservice_raw_video_file_dao.c  monoservice_raw_video_file_dao.h  monoservice_soundcard_upload_file_dao.c  monoservice_video_file_dao.c  monoservice_vproc_queue_cam_upload_file_dao.c  monoservice_vproc_queue_dao.c
Monoservice/lib/: monoservice_media_queue.c  monoservice_media_queue.h  monoservice_qrcode.c
Monoservice/sql/: INSERT_Monoservice_TestData.sql
WebContent/: index.html
WebContent/style/: default.css
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
m4/: ChangeLog
monoservice/: config.h.in  monoservice_main.c  monoservice_main.h
monoservice.share/httpd/: .htaccess
monoservice/cgi-bin/: monoservice_download.c  monoservice_upload.c  monoservice_upload.pl  monoservice_video.c
monoservice/db/: monoservice_aproc_queue_file_dao.c  monoservice_aproc_queue_file_dao.h  monoservice_aproc_queue_mic_upload_file_dao.c  monoservice_aproc_queue_mic_upload_file_dao.h  monoservice_aproc_queue_soundcard_upload_file_dao.c  monoservice_aproc_queue_soundcard_upload_file_dao.h  monoservice_billing_address_dao.c  monoservice_billing_address_dao.h  monoservice_cam_upload_file_dao.c  monoservice_cam_upload_file_dao.h  monoservice_end_credits_audio_file_dao.c  monoservice_end_credits_audio_file_dao.h  monoservice_end_credits_video_file_dao.h  monoservice_media_account_dao.c  monoservice_media_account_dao.h  monoservice_mic_upload_file_dao.c  monoservice_mic_upload_file_dao.h  monoservice_mysql_connector.c  monoservice_mysql_connector.h  monoservice_mysql_connector.pl  monoservice_mysql_connector_manager.h  monoservice_mysql_connector_manager.pl  monoservice_payment_transaction_dao.c  monoservice_purchase_dao.c  monoservice_purchase_dao.h  monoservice_raw_audio_file_dao.c  monoservice_raw_audio_file_dao.h  monoservice_raw_video_file_dao.c  monoservice_raw_video_file_dao.h  monoservice_screen_upload_file_dao.c  monoservice_screen_upload_file_dao.h  monoservice_session_store_dao.c  monoservice_session_store_dao.h  monoservice_soundcard_upload_file_dao.c  monoservice_soundcard_upload_file_dao.h  monoservice_title_strip_audio_file_dao.c  monoservice_title_strip_audio_file_dao.h  monoservice_title_strip_video_file_dao.c  monoservice_title_strip_video_file_dao.h  monoservice_video_file_dao.h  (+6 more)
monoservice/lib/: monoservice_qrcode.c  monoservice_qrcode.h
monoservice/sql/: CREATE_Monoservice_MySQL_Database.sql
monoservice/test/lib/: test_qrcode.c
po/: ChangeLog
test/: form.html
test/cgi-bin/: upload.sh
(+60 files in other folders)
